[gd_scene load_steps=17 format=3 uid="uid://btytqicy2272h"]

[ext_resource type="Texture2D" uid="uid://bhjkwkrswdmkj" path="res://assets/UI/fight_UI/ninepatch_default_blackt.png" id="1_3onpl"]
[ext_resource type="Script" uid="uid://7axo0rq4f7ut" path="res://scenes/pause/pause_UI/pause_ui.gd" id="1_vte5a"]
[ext_resource type="FontFile" uid="uid://tybb5lh7kdw5" path="res://assets/Fonts/dragon-warrior-iv.ttf" id="2_iyrvm"]
[ext_resource type="Texture2D" uid="uid://dnnp13hcs1cob" path="res://assets/UI/icons/bottles/Icon1.png" id="3_edype"]
[ext_resource type="Texture2D" uid="uid://cu4323jgibu8c" path="res://assets/UI/icons/bottles/Icon2.png" id="4_6k4di"]
[ext_resource type="Texture2D" uid="uid://dvyssqy10pgoj" path="res://assets/characters/EspadaP.png" id="4_djxsx"]
[ext_resource type="Texture2D" uid="uid://crvl7dc5vlxdv" path="res://assets/characters/BrujaL.png" id="5_5hvr2"]
[ext_resource type="Texture2D" uid="uid://b7jwjtl4b7dxw" path="res://assets/UI/icons/bottles/Icon11.png" id="5_avjgs"]
[ext_resource type="Texture2D" uid="uid://tyly7ufqmfdh" path="res://assets/characters/CazadoraM.png" id="6_nv3ow"]
[ext_resource type="Texture2D" uid="uid://d2ma55rmt7fb4" path="res://assets/characters/GuitarraL.png" id="7_7yacm"]
[ext_resource type="Script" uid="uid://d2qgxgda7vsi7" path="res://scenes/pause/pause_UI/curar_panel.gd" id="11_5hvr2"]

[sub_resource type="Theme" id="Theme_ka4eu"]

[sub_resource type="Theme" id="Theme_y8u5u"]
default_font = ExtResource("2_iyrvm")

[sub_resource type="LabelSettings" id="LabelSettings_khh63"]
font = ExtResource("2_iyrvm")

[sub_resource type="Theme" id="Theme_khh63"]

[sub_resource type="LabelSettings" id="LabelSettings_5kfc4"]
font = ExtResource("2_iyrvm")
font_size = 23

[node name="pause_UI" type="CanvasLayer"]
script = ExtResource("1_vte5a")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_top = -0.001
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.27999997
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_ka4eu")
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("1_3onpl")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08800001
anchor_top = 0.08400001
anchor_right = 0.90300006
anchor_bottom = 0.896
offset_left = 0.05599785
offset_top = 0.03199768
offset_right = 0.08596802
offset_bottom = -401.224
theme = SubResource("Theme_y8u5u")
theme_override_constants/separation = 22
alignment = 1

[node name="Return" type="Button" parent="HBoxContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Return"

[node name="Items" type="Button" parent="HBoxContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Items"

[node name="Exit" type="Button" parent="HBoxContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Exit Game"

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.10300001
anchor_top = 0.068
anchor_right = 0.83900005
anchor_bottom = 0.155
offset_left = 7.7179985
offset_top = -26.892002
offset_right = 7.6539917
offset_bottom = -26.860008
text = "Money: 0"
label_settings = SubResource("LabelSettings_khh63")

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_3onpl")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="HBoxContainer" type="BoxContainer" parent="HBoxContainer/NinePatchRect2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 8.0
offset_right = -590.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_khh63")
theme_override_constants/separation = 20

[node name="potion_red" type="Button" parent="HBoxContainer/NinePatchRect2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = " Potion Red "
icon = ExtResource("3_edype")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect2/HBoxContainer/potion_red"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257
anchor_top = 0.72400004
anchor_right = 0.71300006
anchor_bottom = 0.9760001
offset_left = 0.042999268
offset_top = 0.051994324
offset_right = -0.013008118
offset_bottom = 0.04798889
text = "x 0"
horizontal_alignment = 1

[node name="potion_yellow" type="Button" parent="HBoxContainer/NinePatchRect2/HBoxContainer"]
layout_mode = 2
text = " Potion Yellow "
icon = ExtResource("4_6k4di")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect2/HBoxContainer/potion_yellow"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.75600004
anchor_right = 0.66400003
anchor_bottom = 0.93700004
offset_left = 0.03199768
offset_top = -1.0120087
offset_right = -0.008003235
offset_bottom = 0.0009918213
text = "x 0"
horizontal_alignment = 1

[node name="potion_purple" type="Button" parent="HBoxContainer/NinePatchRect2/HBoxContainer"]
layout_mode = 2
text = " Potion Purple "
icon = ExtResource("5_avjgs")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect2/HBoxContainer/potion_purple"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33600003
anchor_top = 0.75600004
anchor_right = 0.66400003
anchor_bottom = 0.93700004
offset_left = 0.0079956055
offset_top = -0.012008667
offset_right = -0.008003235
offset_bottom = 0.0009918213
text = "x 0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NinePatchRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.9990001
anchor_bottom = 0.99700004
offset_right = -4.0160522
offset_bottom = 5.1569824

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer"]
layout_mode = 2

[node name="icono_personaje1" type="TextureRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 7.0
offset_right = 47.0
offset_bottom = 1031.0
grow_horizontal = 2
scale = Vector2(0.1577499, 0.17006512)
texture = ExtResource("4_djxsx")

[node name="personaje1" type="Label" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect/icono_personaje1"]
layout_mode = 0
offset_left = 1014.2637
offset_top = 176.40303
offset_right = 1717.2637
offset_bottom = 240.40303
scale = Vector2(3.72406, 5.3710513)
text = "Hp: 100 "
label_settings = SubResource("LabelSettings_5kfc4")

[node name="icono_personaje2" type="TextureRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 14.999999
offset_top = 186.00002
offset_right = 60.0
offset_bottom = 1210.0
grow_horizontal = 2
scale = Vector2(0.1577499, 0.17006512)
texture = ExtResource("5_5hvr2")

[node name="personaje2" type="Label" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect/icono_personaje2"]
layout_mode = 0
offset_left = 1014.2637
offset_top = 176.40303
offset_right = 1717.2637
offset_bottom = 240.40303
scale = Vector2(3.72406, 5.3710513)
text = "Hp: 100 "
label_settings = SubResource("LabelSettings_5kfc4")

[node name="icono_personaje3" type="TextureRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.999999
offset_top = 368.0
offset_right = 61.0
offset_bottom = 1392.0
grow_horizontal = 2
scale = Vector2(0.1577499, 0.17006512)
texture = ExtResource("6_nv3ow")

[node name="personaje3" type="Label" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect/icono_personaje3"]
layout_mode = 0
offset_left = 1014.2637
offset_top = 176.40303
offset_right = 1717.2637
offset_bottom = 240.40303
scale = Vector2(3.72406, 5.3710513)
text = "Hp: 100 "
label_settings = SubResource("LabelSettings_5kfc4")

[node name="icono_personaje4" type="TextureRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 18.999998
offset_top = 541.00006
offset_right = 64.0
offset_bottom = 1565.0
grow_horizontal = 2
scale = Vector2(0.1577499, 0.17006512)
texture = ExtResource("7_7yacm")

[node name="personaje4" type="Label" parent="HBoxContainer/NinePatchRect2/VBoxContainer/NinePatchRect/icono_personaje4"]
layout_mode = 0
offset_left = 1014.2637
offset_top = 176.40303
offset_right = 1717.2637
offset_bottom = 240.40303
scale = Vector2(3.72406, 5.3710513)
text = "Hp: 100 "
label_settings = SubResource("LabelSettings_5kfc4")

[node name="curar_panel" type="Panel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.45100003
anchor_top = 0.39000002
anchor_right = 0.75900006
anchor_bottom = 0.531
offset_left = -16.28003
offset_top = 16.199982
offset_right = -21.52008
offset_bottom = 15.679993
script = ExtResource("11_5hvr2")

[node name="NinePatchRect" type="NinePatchRect" parent="curar_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 2.0

[node name="VBoxContainer" type="HBoxContainer" parent="curar_panel/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 1.0
offset_right = -140.05402
offset_bottom = -2.0

[node name="personaje1" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje1"
icon = ExtResource("4_djxsx")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="personaje2" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje2"
icon = ExtResource("5_5hvr2")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="personaje3" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje3"
icon = ExtResource("6_nv3ow")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="personaje4" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje4"
icon = ExtResource("7_7yacm")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[connection signal="pressed" from="HBoxContainer/NinePatchRect/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect/VBoxContainer/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect2/HBoxContainer/potion_red" to="." method="_on_potion_red_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect2/HBoxContainer/potion_yellow" to="." method="_on_potion_yellow_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect2/HBoxContainer/potion_purple" to="." method="_on_potion_purple_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje1" to="." method="_on_personaje_1_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje2" to="." method="_on_personaje_2_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje3" to="." method="_on_personaje_3_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje4" to="." method="_on_personaje_4_pressed"]
